# ESP32_smart_led

./: .easignore  .gitignore  AP_MODE_GUIDE.md  CMakeLists.txt  DOKUMENTACJA.md  Dockerfile  README.md  build_and_flash.sh  client.http  compose.override.yaml  compose.prod.yaml  compose.yaml  compose.yml  docker-compose.yaml  esp32_workspace.code-workspace  mosquitto.conf  mosquitto.conf.example  pom.xml  secure_flash.sh  test_server.py
backend/: Dockerfile  client.http  pom.xml
backend/src/main/resources/: application-dev.yml  application-prod.yml  application.properties  application.yml
ble_com/: CMakeLists.txt  sdkconfig
ble_com/main/: main.cpp
blink/: sdkconfig
blink/.cache/clangd/index/: blink_example_main.c.6A92EC6A418C72B2.idx  led_strip.h.7E01721248332EEB.idx  (+9 more)
esp32/: .gitignore  README.md
esp32/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_mqtt.c  app_sntp.h  app_wifi.c  app_wifi.h
esp32_ble_simulation/: README.md
esp32_ble_simulation/ble_client/: CMakeLists.txt
esp32_ble_simulation/ble_client/main/: main.cpp
esp32_ble_simulation/ble_sensor_simulator/: CMakeLists.txt
esp32_ble_simulation/ble_sensor_simulator/main/: main.cpp
frontend-web/: index.html  package-lock.json  package.json  vite.config.js
frontend-web/public/: manifest.json
frontend-web/src/: App.jsx  main.jsx
frontend-web/src/api/: auth.jsx  client.js
frontend-web/src/components/: Dashboard.jsx  DeviceControl.jsx  Login.jsx  Provisioning.jsx  Register.jsx
main/: main.c
main_esp/: BLE_MOBILE_APP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROVISIONING_IMPLEMENTATION.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  secure_flash.sh
main_esp/main/: CMakeLists.txt  app_common.c  app_common.h  app_mqtt.c  app_mqtt.cpp  app_mqtt.h  app_sntp.c  ble_provisioning.cpp  ble_provisioning.h  bmp280.c  bmp280.h  config.h  hc_sr04.cpp  hc_sr04.h  http_server.c  http_server.cpp  http_server.h  idf_component.yml  latest_sensor_data.cpp  latest_sensor_data.h  led_animations.h  led_config.cpp  led_config.h  led_controller.h  main.cpp  ota_update.c  ota_update.h  person_counter.cpp  person_counter.h  sensor_manager.cpp  sensor_manager.h  sensor_task.cpp  sensor_task.h  wifi_config.cpp  wifi_config.h  wifi_station.cpp  wifi_station.h  ws2812b_controller.cpp  ws2812b_controller.h
mobile/: App.js  README.md  app.json  package-lock.json  package.json
mobile/components/: DashboardScreen.js  ProvisioningScreen.js  SettingsScreen.js
rd01_test/: CMakeLists.txt
rd01_test/main/: main.c
src/main/resources/: application-dev.yaml  application-prod.yaml  application.yaml
wifi_led_project/: sdkconfig  sdkconfig.defaults
wifi_led_project/main/: CMakeLists.txt  Kconfig.projbuild  access_point.cpp  access_point.h  app_sntp.c  ble_provisioning.cpp  config.h  http_client.cpp  http_client.h  led_controller.cpp  led_controller.h  main.cpp  station_example_main.c  web_server.cpp  web_server.h  wifi_config.cpp  wifi_station.cpp  wifi_station.h
(+125 files in other folders)
